--- a/backend/src/components/media/featured-project.json
+++ b/backend/src/components/media/featured-project.json
@@ -2,7 +2,8 @@
   "collectionName": "components_media_featured_projects",
   "info": {
     "displayName": "Featured Project",
-    "icon": "archive"
+    "icon": "archive",
+    "description": ""
   },
   "options": {},
   "attributes": {
@@ -13,6 +14,16 @@
     "Project_Description": {
       "type": "blocks",
       "required": true
+    },
+    "Project_Image": {
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos",
+        "audios"
+      ],
+      "type": "media",
+      "multiple": false
     }
   }
 }
