update .env production link

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND=https://fierce-earth-06516-833db3fb9e28.herokuapp.com
+REACT_APP_BACKEND=https://romantic-excellence-ed964c0759.strapiapp.com
