changes to collaborators page

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND=http://localhost:1337
+REACT_APP_BACKEND=https://romantic-excellence-ed964c0759.strapiapp.com
+# REACT_APP_BACKEND=http://localhost:1337
